added router and throttle function

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
         <link href="{{ url_for('static', filename='node_modules/alertifyjs/build/css/alertify.min.css') }}" rel="stylesheet" type="text/css" />
         <script type="text/javascript" src="{{ url_for('static', filename='node_modules/alertifyjs/build/alertify.min.js') }}"></script>
 
+        <script type="text/javascript" src="{{ url_for('static', filename='node_modules/navigo/lib/navigo.min.js') }}"></script>
+
         <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}"></script>
         <script type="module" src="{{ url_for('static', filename='app.js') }}"></script>
     </head>
