--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
 
         <script type="text/javascript" src="{{ url_for('static', filename='node_modules/navigo/lib/navigo.min.js') }}"></script>
 
+        <script type="text/javascript" src="{{ url_for('static', filename='node_modules/mitt/dist/mitt.umd.js') }}"></script>
+
         <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}"></script>
         <script type="module" src="{{ url_for('static', filename='app.js') }}"></script>
     </head>
